# ClipCleaner

./: .gitignore  CMakeLists.txt  README.md  build-native.ps1
src/: main.cpp  text_cleaner.cpp  text_cleaner.h
tests/: text_cleaner_tests.cpp
